--- a/appState.json
+++ b/appState.json
@@ -8,7 +8,8 @@
         "type": "DIRECTORY",
         "isDirectory": true,
         "children": [
-          "24ee08f4-9a6c-4db1-b122-2bc67bd1e363"
+          "24ee08f4-9a6c-4db1-b122-2bc67bd1e363",
+          "09c340dd-c68f-4110-bb22-dbd452df9a81"
         ],
         "isRemovable": false,
         "filePath": "ddd"
@@ -31,6 +32,17 @@
           "layers": []
         },
         "triggers": []
+      },
+      "09c340dd-c68f-4110-bb22-dbd452df9a81": {
+        "id": "09c340dd-c68f-4110-bb22-dbd452df9a81",
+        "parent": "da90a63c-0af8-4211-bc4b-d5005d22017d",
+        "name": "file.js",
+        "type": "JS_FILE",
+        "isDirectory": false,
+        "children": [],
+        "isRemovable": true,
+        "filePath": "ddd/file.js",
+        "code": ""
       }
     },
     "deletedFiles": [],
@@ -65,7 +77,7 @@
     "projectRegion": "us-east-1",
     "platform": "AWS",
     "platformRegions": {},
-    "lastSave": 1565869336195
+    "lastSave": 1565869467421
   },
   "VCS_STATE": {
     "provider": "GitHub",
