--- a/appState.json
+++ b/appState.json
@@ -10,7 +10,8 @@
         "children": [
           "24ee08f4-9a6c-4db1-b122-2bc67bd1e363",
           "09c340dd-c68f-4110-bb22-dbd452df9a81",
-          "8c446872-32aa-43f8-aea5-147362907a4c"
+          "8c446872-32aa-43f8-aea5-147362907a4c",
+          "74736eae-d164-413a-ad09-3385b3ebf11a"
         ],
         "isRemovable": false,
         "filePath": "ddd"
@@ -60,14 +61,26 @@
         "isRemovable": true,
         "filePath": "ddd/new.js",
         "code": "console.log();"
+      },
+      "74736eae-d164-413a-ad09-3385b3ebf11a": {
+        "id": "74736eae-d164-413a-ad09-3385b3ebf11a",
+        "parent": "da90a63c-0af8-4211-bc4b-d5005d22017d",
+        "name": "myfile.js",
+        "type": "JS_FILE",
+        "isDirectory": false,
+        "children": [],
+        "isRemovable": true,
+        "filePath": "ddd/myfile.js",
+        "code": "// remote"
       }
     },
     "deletedFiles": [],
     "rootNode": "da90a63c-0af8-4211-bc4b-d5005d22017d",
     "openFiles": [
-      "24ee08f4-9a6c-4db1-b122-2bc67bd1e363"
+      "24ee08f4-9a6c-4db1-b122-2bc67bd1e363",
+      "74736eae-d164-413a-ad09-3385b3ebf11a"
     ],
-    "currentFileId": "24ee08f4-9a6c-4db1-b122-2bc67bd1e363",
+    "currentFileId": "74736eae-d164-413a-ad09-3385b3ebf11a",
     "resources": {
       "apigusEast1sachithraAPInameinduput": {
         "name": "apigusEast1sachithraAPInameinduput",
